# thread_logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
include/: log_backend_interface.h  log_client.h  message_type.h
src/: log_client.cpp  logger.cpp  logger.h  message.h
